<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
<!--
    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_activity_toolbar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
    </android.support.v7.widget.Toolbar>-->

    <ScrollView
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_user_picture_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/profile_user_picture"
                    android:onClick="OnImageSelect"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@mipmap/ic_profile_picture_default"/>

                <Button
                    android:id="@+id/profile_take_picture"
                    android:text="@string/take_picture"
                    android:onClick="OnImageSelect"
                    android:layout_toRightOf="@id/profile_user_picture"
                    android:layout_centerVertical="true"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <!--
                                <Button
                                    android:text="@string/select_from_gallerie"
                                    android:onClick="OnGallerySelect"
                                    android:layout_toRightOf="@id/register_take_picture"
                                    android:layout_centerVertical="true"
                                    android:textAllCaps="false"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                -->
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/profile_nameWrapper">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:hint="@string/name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/profile_surnameWrapper">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:hint="@string/surname"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/profile_selectGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:id="@+id/button_male"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:id="@+id/button_female"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/other"
                    android:id="@+id/button_other"/>
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_descWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:minLines="1"
                    android:maxLines="10"
                    android:imeOptions="actionDone"
                    android:hint="@string/description"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/profile_save"
                    android:text="@string/save"
                    android:onClick="OnProfileSave"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>