<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.salleurl.ls30394.foodfinderapp.activities.DescriptionActivity"
    tools:showIn="@layout/activity_description">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/text_margin"
        android:layout_marginRight="@dimen/text_margin"
        android:layout_marginTop="@dimen/text_margin"
        android:layout_marginBottom="@dimen/text_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_name"
            android:textColor="@color/coloBlack"
            android:textSize="@dimen/sizeCommentTitle"
            android:layout_marginBottom="@dimen/text_margin"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RatingBar
                style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/ratingBarRestaurant"
                />

            <Button
                android:id="@+id/button_map"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:drawableBottom="@mipmap/ic_map" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_textView"
            android:textColor="@color/coloBlack"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/coloBlack"
            android:text="@string/comment"
            android:textSize="@dimen/sizeCommentTitle"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/comments_list">
        </ListView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_a_comment"
            android:textColor="@color/coloBlack" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_comment"
            android:nextFocusUp="@id/input_comment"
            android:nextFocusLeft="@id/input_comment"
            android:textColor="@color/coloBlack"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:layout_marginLeft="@dimen/size_margin"
            android:id="@+id/button_send"/>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>